<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BmiActivity">

    <TextView
        android:text="@string/bmi_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/weight_txt"
        style="@style/EditTextForm"
        android:hint="@string/weight_hint"/>

    <EditText
        android:id="@+id/height_txt"
        style="@style/EditTextForm"
        android:hint="@string/height_hint"/>

    <Button
        android:id="@+id/ok_bttn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@android:string/ok"/>

    <TextView
        android:id="@+id/result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/bmi_fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"/>



</LinearLayout>